# demo

./: .pilot-commands.yaml  .pilot-hints.md  README.md  docker-compose.yml  gol.py  pyproject.toml  rerun_and_analyze.sh
analyze-test-results/: README.md  analyze-test-results.md.jinja2  fibonacci.py  run.sh  test_fibonacci.py
automated-code-review/: README.md  run.sh
automated-code-review-summarizer/: README.md  run.sh  summarize-pr.md.jinja2
automated-release-notes/: README.md  generate-release-notes.md.jinja2  run.sh
code-review/: README.md  run.sh
code-review-helper/: README.md  review-template.md.jinja2  run.sh
code-review-summary/: README.md  generate-summary.md.jinja2  run.sh
config-file-madness/: Dockerfile  Makefile  README.md  convert.md.jinja2  docker-compose.yml  run.sh
conversation/: README.md  chat.json  run.sh
daily-report/: 2024-06-21.md  2024-06-22.md  2024-06-23.md  2024-06-24.md  2024-06-25.md  2024-06-26.md  2024-06-27.md  2024-06-28.md  2024-06-29.md  2024-06-30.md  2024-07-01.md  2024-07-02.md  2024-07-03.md  2024-07-04.md  2024-07-05.md  2024-07-06.md  2024-07-07.md  2024-07-08.md  2024-07-09.md  2024-07-10.md  2024-07-11.md  2024-07-12.md  2024-07-13.md  2024-07-14.md  2024-07-15.md  2024-07-16.md  2024-07-17.md  2024-07-18.md  2024-07-19.md  2024-07-20.md  2024-07-21.md  2024-07-22.md  2024-07-23.md  2024-07-24.md  2024-07-25.md  2024-07-26.md  2024-07-29.md  2024-07-30.md  2024-07-31.md  2024-08-02.md  (+38 more)
dev-onboarding/: onboarding.json  run.sh
game-of-life/: README.md  demo_script_1.sh  gol.py  pyproject.toml  verify.md.jinja2
(+319 files in other folders)
