[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "A simple implementation of Conway's Game of Life"
authors = ["Author Name <author@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
