[build-system]
requires = ["setuptools>=42", "wheel"]

[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "A simple implementation of Conway's Game of Life"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
